# klusai-models

./: .gitignore  Makefile  README.md  model_card_template.md  pyproject.toml  ruff.toml
baselines/: leaderboard-kp-realskeleton.json
conf/: models.yaml  training.yaml
docs/: klu-106-scorecard.json  klu-106-scorecard.md  klu-106-v2-contamination-carveout.md  klu-109-scorecard.json  klu-109-scorecard.md  klu-11-mlx-fit-spike.md  klu-45-mps-vs-cpu.json  klu-45-mps-vs-cpu.md  klu-46-mlx-encoder-spike.md  klu-48-max-util.json  klu-48-max-util.md  klu-54-eval-split.md  res-19-carve-manifest.json  res-19-hard-general-scorecard.json  res-19-hard-general-scorecard.md  res-98-moe-train-spike.md  res102-stageb-transfer-scorecard.json  res102-stageb-transfer-scorecard.md  res104-reid-win-scorecard.md  res104-xlmr560m-stageb-scorecard.json  res104-xlmr560m-stageb-scorecard.md  res72-cjeu-realprose-tab-scorecard.md  res72-cjeu-tab-transfer-scorecard.json  res72-cjeu-tab-transfer-scorecard.md  res97-scorecard.json  res97-scorecard.md
klusai/privacy/models/: __init__.py  anon.py  logger.py  mlx_encoder.py  mlx_encoder_loader.py  util_sampler.py
klusai/privacy/models/training/: __init__.py  config.py  token_classification.py
klusai/privacy/sdk/: __init__.py
scripts/: bench_klu45_mps_vs_cpu.py  bench_klu48_max_util.py  carve_hard_general_res19.py  confirm_klu54_split.py  evaluate.py  figure_kp_anon_frontier_klu109.py  full_run_klu44.py  score_reid_local.py  scorecard_klu106.py  scorecard_kp_anon_klu109.py  scorecard_res102.py  scorecard_res104.py  scorecard_res97.py  spike_klu11_mdeberta_lora.py  spike_klu46_mlx_encoder.py  spike_res98_moe_train.py  train.py  train_kp_anon_klu109.py  train_res102_stageb_transfer.py  train_v2_klu106.py  train_xlmr560m_res97.py
tests/: test_anon.py  test_config.py  test_mlx_encoder.py  test_sdk.py  test_token_classification.py
