[project]
name = "kp-models"
version = "0.1.0"
description = "KlusAI Privacy models — finetuning, evaluation, and the klusai.privacy.sdk SDK"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
    "click>=8.1,<9",
    "huggingface-hub>=0.25,<2",
    # Shared taxonomy + span alignment + the eval harness. Until europriv-bench is published to
    # an index, `make install` provides it via the sibling editable install.
    "europriv-bench>=0.1",
]

[project.optional-dependencies]
# Training/inference backends are optional so the SDK + config layer stay light.
#
# `hf` and `mlx` are SEPARATE, NON-COMBINABLE install paths — never `pip install .[hf,mlx]`.
# Both transitively pull `transformers`, but they co-constrain it incompatibly: the `hf`
# training stack (and the privacy-filter MoE arch) needs transformers>=5.0, while older
# mlx-lm releases cap/exact-pin transformers below 5.0 (the 4.57.x band found in KLU-11),
# so resolving the two extras together backtracks into an unsatisfiable set. Per KLU-11,
# encoder/token-classification training (xlmr-ner, classifier) never uses MLX, so there is
# no real install path that needs both — keep them in separate environments. See README
# "Backends & extras" for the family→extra map.
hf = ["transformers>=5.0", "torch>=2.4", "datasets>=4.0", "peft>=0.13", "trl>=0.11"]
# mlx-lm>=0.30.7 is the first line that requires transformers>=5.0 (earlier releases cap or
# exact-pin it lower), keeping the MLX path consistent with the privacy-filter MoE arch.
mlx = ["mlx-lm>=0.30.7"]
gliner = ["gliner>=0.2"]
dev = ["pytest>=8.0", "ruff>=0.11", "coverage>=7.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["klusai*"]
namespaces = true        # PEP 420: klusai/ and klusai/privacy/ carry no __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["klusai.privacy.models", "klusai.privacy.sdk"]
